--- a/Homework 14/static/css/style.css
+++ b/Homework 14/static/css/style.css
@@ -98,7 +98,7 @@
     padding: 20px;
     margin: 0;
     background: black;
-    background-image: url("../images/nasa.jpg");
+    background-image: url("../images/ufo-high-res.jpg");
     background-attachment: fixed;
     background-position: bottom center;
     background-size: cover;
@@ -200,6 +200,7 @@
     to {
       font-size: 7.5rem;
       opacity: 1;
+      color: black
     }
   }
   
@@ -211,6 +212,7 @@
     to {
       font-size: 5.5rem;
       opacity: 1;
+    
     }
   }
   
@@ -221,5 +223,6 @@
   
     to {
       opacity: 1;
+      color: black
     }
   }
